--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     },
     "dependencies": {
         "discord.js": "^12.2.0",
+        "dotenv": "^8.2.0",
         "yamljs": "^0.3.0"
     },
     "scripts": {
