--- a/package.json
+++ b/package.json
@@ -26,6 +26,14 @@
         "yamljs": "^0.3.0"
     },
     "scripts": {
-        "debug": "node ."
+        "debug": "node .",
+        "build-ts": "tsc",
+        "postinstall": "npm run build-ts",
+        "start": "npm run serve",
+        "serve": "node build/main.js",
+        "watch-ts": "tsc -w"
+    },
+    "engines": {
+        "node": "8.11.4"
     }
 }
