--- a/package.json
+++ b/package.json
@@ -1,39 +1,38 @@
 {
-    "name": "illuminati-bot",
-    "version": "1.0.0",
-    "main": "./build/main.js",
-    "author": "Bledhard",
-    "start": "node ./src/main.ts",
-    "license": "MIT",
-    "devDependencies": {
-        "@types/debug": "4.1.5",
-        "@types/node": "^9.6.5",
-        "@types/yamljs": "^0.2.30",
-        "debug": "^3.1.0",
-        "del": "^3.0.0",
-        "gulp": "^4.0.2",
-        "gulp-nodemon": "^2.5.0",
-        "gulp-sourcemaps": "^2.6.4",
-        "gulp-tslint": "^8.1.3",
-        "gulp-typescript": "^4.0.2",
-        "tslint": "^5.9.1",
-        "tslint-eslint-rules": "^5.1.0",
-        "typescript": "^2.8.1"
-    },
-    "dependencies": {
-        "discord.js": "^12.2.0",
-        "dotenv": "^8.2.0",
-        "yamljs": "^0.3.0"
-    },
-    "scripts": {
-        "debug": "node .",
-        "build-ts": "tsc",
-        "postinstall": "npm run build-ts",
-        "start": "npm run serve",
-        "serve": "node build/main.js",
-        "watch-ts": "tsc -w"
-    },
-    "engines": {
-        "node": "8.11.4"
-    }
+  "name": "illuminati-bot",
+  "version": "1.0.0",
+  "description": "discord bot to map text channel to each voice channel",
+  "main": "build/main.js",
+  "author": "andretkachenko",
+  "license": "MIT",
+  "dependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/node": "^14.0.1",
+    "@types/ws": "^7.2.4",
+    "@types/yamljs": "^0.2.31",
+    "debug": "^4.1.1",
+    "discord.js": "^12.2.0",
+    "dotenv": "^8.2.0",
+    "gulp": "^4.0.2",
+    "node": "^14.2.0",
+    "typescript": "^3.9.2",
+    "yamljs": "^0.3.0"
+  },
+  "scripts": {
+    "debug": "node .",
+    "build-ts": "tsc",
+    "postinstall": "npm run build-ts",
+    "start": "npm run serve",
+    "serve": "node build/main.js",
+    "watch-node": "nodemon build/main.js",
+    "watch-ts": "tsc -w"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andretkachenko/illuminati-bot.git"
+  },
+  "bugs": {
+    "url": "https://github.com/andretkachenko/illuminati-bot/issues"
+  },
+  "homepage": "https://github.com/andretkachenko/illuminati-bot#readme"
 }
