--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "debug": "^4.1.1",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
-    "gulp": "^4.0.2",
     "node": "^14.2.0",
+    "tslint": "^6.1.2",
+    "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.9.2",
     "ws": "^7.3.0",
     "yamljs": "^0.3.0"
@@ -27,6 +28,9 @@
     "serve": "node build/main.js",
     "watch-node": "nodemon build/main.js",
     "watch-ts": "tsc -w"
+  },
+  "engines": {
+    "node": "12.16.3"
   },
   "repository": {
     "type": "git",
