--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "watch-ts": "tsc -w"
   },
   "engines": {
-    "node": "12.16.3"
+    "node": "12.16.3",
+    "npm": "6.14.4"
   },
   "repository": {
     "type": "git",
