--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "node": "^14.2.0",
+    "nodemon": "^2.0.4",
     "tslint": "^6.1.2",
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.9.2",
