--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@types/node": "^14.0.1",
     "@types/ws": "^7.2.4",
     "@types/yamljs": "^0.2.31",
+    "@types/mongodb": "^3.5.18",
     "debug": "^4.1.1",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
+    "mongodb": "^3.5.7",
     "node": "^14.2.0",
     "nodemon": "^2.0.4",
     "tslint": "^6.1.2",
