--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,9 @@
 TOKEN=your_token_goes_here_without_quotation_marks
 NODE_ENV=debug
 PREFIX=!
-ACTIVITY=Dare to look what is inside?
+MONGO_NAME=admin
+MONGO_PWD=password
+MONGO_CLUSTER=cluster-path/test?retryWrites=true&w=majority
+MONGO_DB=IlluminatiBotDB
+MONGO_INTRO_COLLECTION=IntroMaps
+MONGO_TXT_COLLECTION=TextChannelMaps
