revamp text channel parent fetching

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,7 @@
 TOKEN=your_token_goes_here_without_quotation_marks
 NODE_ENV=debug
 PREFIX=!
+CATEGORY=Nexus channels
 MONGO_NAME=admin
 MONGO_PWD=password
 MONGO_CLUSTER=clustername.mongodb.net/test?retryWrites=true&w=majority
