--- a/.env.sample
+++ b/.env.sample
@@ -8,3 +8,4 @@ MONGO_CLUSTER=clustername.mongodb.net/test?retryWrites=true&w=majority
 MONGO_DB=IlluminatiBotDB
 MONGO_INTRO_COLLECTION=IntroMaps
 MONGO_TXT_COLLECTION=TextChannelMaps
+IMG=https://i.imgur.com/aJPo4C8.png
