--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,11 @@
 TOKEN=your_token_goes_here_without_quotation_marks
+NODE_ENV=DEBUG
 PREFIX=!
 CATEGORY=Nexus channels
 MONGO_NAME=admin
 MONGO_PWD=password
 MONGO_CLUSTER=clustername.mongodb.net/test?retryWrites=true&w=majority
-MONGO_DB=IlluminatiBotDB
+MONGO_DB=NexusBotDB
 MONGO_TXT_COLLECTION=TextChannelMaps
+MONGO_CATEGORY_COLLECTION=TextCategories
 IMG=https://i.imgur.com/aJPo4C8.png
