--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "nexus-bot",
-  "version": "3.2.15",
+  "version": "3.3.1",
   "description": "discord bot to map text channel to each voice channel",
   "main": "build/main.js",
   "author": "andretkachenko",
   "license": "MIT",
   "dependencies": {
-    "@types/debug": "^4.1.5",
-    "@types/mongodb": "^3.5.18",
-    "@types/node": "^14.0.1",
-    "@types/ws": "^7.2.4",
-    "debug": "^4.1.1",
-    "discord.js": "^12.5.2",
+    "@types/mongodb": "^3.6.11",
+    "@types/node": "^14.14.37",
+    "@types/ws": "^7.4.1",
+    "discord.js": "^12.5.3",
     "dotenv": "^8.2.0",
-    "mongodb": "^3.5.7",
-    "node": "^14.2.0",
-    "nodemon": "^2.0.4",
-    "tslint": "^6.1.2",
+    "mongodb": "^3.6.5",
+    "node": "^14.16.0",
+    "nodemon": "^2.0.7",
     "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^3.9.2",
-    "ws": "^7.3.0"
+    "typescript": "^3.9.9",
+    "ws": "^7.4.4"
   },
   "scripts": {
     "debug": "node .",
@@ -28,7 +25,8 @@
     "start": "npm run serve",
     "serve": "node build/main.js",
     "watch-node": "nodemon build/main.js",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "lint": "eslint -c .eslintrc.json --ext .ts src"
   },
   "engines": {
     "node": "12.16.3",
@@ -41,5 +39,13 @@
   "bugs": {
     "url": "https://github.com/andretkachenko/nexus-bot/issues"
   },
-  "homepage": "https://github.com/andretkachenko/nexus-bot#readme"
+  "homepage": "https://github.com/andretkachenko/nexus-bot#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-prefer-arrow": "^1.2.3"
+  }
 }
