--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,12 @@ Happy linting! 💖
         "@typescript-eslint"
     ],
     "rules": {
+        "@typescript-eslint/no-unused-vars": [ 
+            "error",
+            { 
+                "argsIgnorePattern": "^_" 
+            }
+        ],
         "@typescript-eslint/adjacent-overload-signatures": "error",
         "@typescript-eslint/array-type": [
             "error",
