--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,31 +2,16 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "npm",
-			"script": "lint",
+			"type": "typescript",
+			"tsconfig": "tsconfig.json",
 			"problemMatcher": [
-				"$eslint-stylish"
+				"$tsc"
 			],
-			"label": "npm: lint",
-			"detail": "eslint -c .eslintrc.js --ext .ts src"
-		},
-		{
-			"type": "npm",
-			"script": "build-ts",
-			"label": "npm: compile typescript",
-			"detail": "eslint -c .eslintrc.js --ext .ts src",
-			"problemMatcher": [],
 			"group": {
 				"kind": "build",
 				"isDefault": true
-			}
+			},
+			"label": "tsc: build - tsconfig.json"
 		}
-	],
-	"compounds": [
-	  {
-		"name": "Node",
-		"configurations": ["Node.js"],
-		"preLaunchTask": "${defaultBuildTask}"
-	  }
 	]
 }
