--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
 	"compilerOptions": {
 		"target": "es2017",
 		"module": "commonjs",
-		"outDir": "./build",
-		"rootDir": "./src",
+		"outDir": "build",
+		"rootDir": "src",
 		"moduleResolution": "node",
 		"declaration": false,
 		"strict": true,
