--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
-TOKEN=your_token_goes_here_without_quotation_marks
-NODE_ENV=DEBUG
-PREFIX=!
-MONGO_NAME=admin
-MONGO_PWD=password
-MONGO_CLUSTER=clustername.mongodb.net/test?retryWrites=true&w=majority
-MONGO_DB=NexusBotDB
-IMG=https://i.imgur.com/aJPo4C8.png
+TOKEN="your_token_goes_here_without_quotation_marks"
+NODE_ENV="DEBUG"
+PREFIX="!"
+MONGO_NAME="admin"
+MONGO_PWD="password"
+MONGO_CLUSTER="clustername.mongodb.net/test?retryWrites=true&w=majority"
+MONGO_DB="NexusBotDB"
+IMG="https://i.imgur.com/aJPo4C8.png"
