--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus-bot",
-  "version": "3.4.12",
+  "version": "3.5.1",
   "description": "discord bot to map text channel to each voice channel",
   "main": "build/main.js",
   "author": "andretkachenko",
@@ -17,6 +17,15 @@
     "tslint-eslint-rules": "^5.4.0",
     "typescript": "^3.9.9",
     "ws": "^7.4.4"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
+    "eslint": "^7.23.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^32.3.0",
+    "eslint-plugin-no-else": "^0.2.2",
+    "eslint-plugin-prefer-arrow": "^1.2.3"
   },
   "scripts": {
     "debug": "node .",
@@ -39,13 +48,5 @@
   "bugs": {
     "url": "https://github.com/andretkachenko/nexus-bot/issues"
   },
-  "homepage": "https://github.com/andretkachenko/nexus-bot#readme",
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
-    "eslint": "^7.23.0",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsdoc": "^32.3.0",
-    "eslint-plugin-prefer-arrow": "^1.2.3"
-  }
+  "homepage": "https://github.com/andretkachenko/nexus-bot#readme"
 }
