--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,17 +17,18 @@ jobs:
       matrix:
         node-version: [14.x]
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
       - name: Node.js
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: npm install
-      - run: npm install
+        run: npm install
 
       - name: build
-      - run: npm run build-ts   
+        run: npm run build-ts   
 
       - name: lint
-      - run: npm run lint
+        run: npm run lint
