--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: "^14.16.0"
+        node-version: [14.x]
     steps:
       - name: checkout
         uses: actions/checkout@v2
