rework into slash commands

--- a/.env.sample
+++ b/.env.sample
@@ -1,6 +1,6 @@
 TOKEN="your_token_goes_here_without_quotation_marks"
 NODE_ENV="DEBUG"
-PREFIX="!"
+TEST_SERVER="test_server_id"
 MONGO_NAME="admin"
 MONGO_PWD="password"
 MONGO_CLUSTER="clustername.mongodb.net/test?retryWrites=true&w=majority"
