change invite link

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,4 @@
+APPLICATION_ID="application_id"
 TOKEN="your_token_goes_here_without_quotation_marks"
 NODE_ENV="DEBUG"
 TEST_SERVER="test_server_id"
