--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
   "name": "nexus-bot",
-  "version": "4.0.1",
+  "version": "4.1.0",
   "description": "discord bot to map text channel to each voice channel",
   "main": "build/main.js",
   "author": "andretkachenko",
   "license": "MIT",
   "dependencies": {
-    "@discordjs/builders": "^0.5.0",
-    "@discordjs/rest": "^0.1.0-canary.0",
-    "@types/mongodb": "^3.6.20",
-    "@types/ws": "^7.4.7",
-    "discord-api-types": "^0.22.0",
-    "discord.js": "^13.0.1",
-    "dotenv": "^8.6.0",
-    "latest": "^0.2.0",
-    "mongodb": "^3.6.11",
-    "node": "^16.6.1",
-    "nodemon": "^2.0.12",
-    "tslint-eslint-rules": "^5.4.0",
-    "typescript": "^4.3.5",
-    "ws": "^7.5.3"
+    "@discordjs/builders": "0.5.0",
+    "@discordjs/rest": "0.4.1",
+    "discord-api-types": "0.22.0",
+    "discord.js": "^13.3.1",
+    "dotenv": "8.6.0",
+    "latest": "0.2.0",
+    "mongodb": "3.6.11",
+    "node": "16.6.1",
+    "nodemon": "2.0.12",
+    "typescript": "4.3.5",
+    "ws": "7.5.3"
   },
   "devDependencies": {
-    "@types/node": "^16.7.2",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.0",
-    "eslint-plugin-jsdoc": "^32.3.4",
-    "eslint-plugin-no-else": "^0.2.2",
-    "eslint-plugin-prefer-arrow": "^1.2.3"
+    "@types/mongodb": "3.6.20",
+    "@types/node": "16.7.2",
+    "@types/ws": "7.4.7",
+    "@typescript-eslint/eslint-plugin": "4.29.0",
+    "@typescript-eslint/parser": "4.29.0",
+    "eslint": "7.32.0",
+    "eslint-plugin-import": "2.24.0",
+    "eslint-plugin-jsdoc": "32.3.4",
+    "eslint-plugin-no-else": "0.2.2",
+    "eslint-plugin-prefer-arrow": "1.2.3"
   },
   "scripts": {
     "debug": "node .",
@@ -42,8 +41,8 @@
     "lint": "eslint -c .eslintrc.json --ext .ts src"
   },
   "engines": {
-    "node": "v16.6.1",
-    "npm": "7.20.5"
+    "node": "v16.15.0",
+    "npm": "8.5.5"
   },
   "repository": {
     "type": "git",
