--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus-bot",
-  "version": "4.2.0",
+  "version": "4.2.1",
   "description": "discord bot to map text channel to each voice channel",
   "main": "build/main.js",
   "author": "andretkachenko",
@@ -11,6 +11,8 @@
     "discord-api-types": "0.22.0",
     "discord.js": "^13.3.1",
     "dotenv": "8.6.0",
+    "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "mongodb": "3.6.11",
     "node": "16.6.1",
     "nodemon": "2.0.20",
@@ -18,6 +20,7 @@
     "ws": "7.5.3"
   },
   "devDependencies": {
+    "@types/express": "^4.17.17",
     "@types/mongodb": "3.6.20",
     "@types/node": "16.7.2",
     "@types/ws": "7.4.7",
